# labelValidation

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
.streamlit/: config.toml
batch_csvs/: batch1.csv
tests/: test_app.py
